# opinionated-rag

./: .gitignore  ascync_wrapper.py  cap_forward_citations.py  compiled_bot.json  compiled_bot_cot_fewshot.json  compiled_bot_cot_fewshotv2.json  compiled_bot_cot_knn.json  compiled_bot_knnv2.json  court_listener.py  courtlistener.py  database.py  forward_citations.parquet  forward_citations.xlsx  main.py  opinion.py  perplexity.html  pseudo_shepardize.xlsx  pyproject.toml  run.py  scratch.ipynb  third_compiled_bot.json  turbo_main.py  uncompiled_bot.json  viable.html
api/: audio.json  courtlistener_api.json  opinion.json
data/: cases_output.json  citation_search_data.json  opinion_sample.txt
data/models/: cited_decisions.json
notebooks/: 1.Getting-Started-with-RAG-in-DSPy.ipynb  NER_powered_Semantic_Search_with_LanceDB.ipynb  agent_search.ipynb  audio_search.ipynb  chain-of-density.ipynb  debug.html  dspy_scratch.ipynb  google_research.ipynb  graph_maker copy.ipynb  graph_maker.ipynb  graphrag.ipynb  graphrag_scratch.ipynb  graphrag_scratch_v2.ipynb  instructor_scratch.ipynb  pipeline.ipynb  pseudo_shep.ipynb  public_data_exploration copy.ipynb  public_data_exploration.ipynb  scratch.ipynb  sub_questions.ipynb  vector_search copy.ipynb  vector_search.ipynb  weather_app.ipynb  web_research copy.ipynb  web_research.ipynb  wrapper.ipynb
omni/: index.html  llm_autocomplete.ipynb  omni_predict.ipynb  package.json
omni/prompts/: prompt.txt  prompt_concierge.txt  prompt_predict.txt
omni/prompts/knowledge_bases/LSS/: domain_knowledge.txt  previous_completions.json
omni/prompts/knowledge_bases/cons/: domain_knowledge.txt  previous_completions.json
omni/server/: main.py
omni/server/modules/: consierge.py  llm.py  omni_predict.py  omnicomplete.py
omni/src/: App.vue  style.css
omni/src/components/: OmniComplete.vue
pages/: pdf.py
src/: cap_forward_citations.py  citations.py  courtlistener.py  driver.py  style.css  title_page.html  types.py  utils.py
src/agent/: base.py  batch.py  chat_agent.py  chat_document.py  instruments.py  memwalker.py  openai_assistant.py  research.py  research_bot.py  task.py  tool_message.py
src/agent/special/: doc_chat_agent.py  lance_doc_chat_agent.py  relevance_extractor_agent.py  table_chat_agent.py
src/agent/special/lance_rag/: critic_agent.py  lance_rag_task.py  lance_tools.py  query_planner_agent.py
src/agent/tools/: full_text_search.py  google_search_tool.py  hybrid_search.py  models.py  recipient_tool.py  refactor_report.py  report.py  segment_extract_tool.py  semantic_search.py  splade_search.py  utils.py
src/app/: adv_rag.py  app.py  index.html  main.py  weatherapp.py
src/cachedb/: momento_cachedb.py  redis_cachedb.py
src/db/: base.py  chromadb.py  db_embeddings.py  lancedb.py  qdrantdb.py
src/db/graph_memory/: __init__.py  database.py  models.py
src/doc_store/: base.py  cap.py  cap_api.py  cap_client.py  cap_forward_citations.py  cl_api.py  cl_audio_client.py  cl_client.py  courtlistener.py  ebay_client.py  ebay_scraper.py  ebay_utils.py  pseudo_shep.py  utils.py
src/dspy/: evaluators.py  metrics.py  utils.py
src/embedding_models/: base.py  clip.py  models.py  splade.py
src/graphrag/: graphrag_manager.py  settings.yaml  utils.py
src/graphrag/prompts/: community_report.txt  entity_extraction.txt  summarize_descriptions.txt
src/hipporag/: config_manager.py  create_graph.py  create_graph_v2.py  embedding_util.py  hipporag.py  langchain_util.py  named_entity_extraction_parallel.py  openie_with_retrieval_option_parallel.py  processing.py  retrieval_model.py
src/llm/: assistant.py  azure_openai.py  base.py  basemodel.py  complex_qa.py  gpt.py  openai_gpt.py  subquestion_generator.py  utils.py
src/paperqa/: docs.py  prompts.py  readers.py  types.py  utils.py
src/parsing/: agent_chats.py  document_parser.py  fuzzy_citations.py  graph_maker.py  para_sentence_split.py  parser.py  pdf2markdown.py  repo_loader.py  search.py  table_loader.py  url_loader.py  urls.py  utils.py  web_search.py
src/parsing/marker/: convert.py  models.py  output.py  settings.py  utils.py
src/parsing/marker/cleaners/: code.py  fontstyle.py  headers.py  headings.py  text.py
src/parsing/marker/debug/: data.py
src/parsing/marker/equations/: equations.py  inference.py
src/parsing/marker/images/: extract.py  save.py
src/parsing/marker/layout/: layout.py  order.py
src/parsing/marker/ocr/: detection.py  heuristics.py  lang.py  recognition.py  tesseract.py  utils.py
src/parsing/marker/postprocessors/: editor.py  markdown.py
src/parsing/marker/schema/: bbox.py  (+4 more)
src/prompts/: prompts_config.py  templates.py
src/schema/: audio.py  citations.py  dataframe.py  decisions.py  docket.py  opinion.py  opinion_cluster_model.py  opinion_model.py
src/schema/api/: docket.json  opinion_cluster.json
src/search/: app.py  auto_entity_search.py  base.py  doc_joiner.py  intent.py  intent_helper.py  lance.py  lang_utils.py  llm_filter.py  models.py  nb_doc.py  query_expansion.py  query_filter.py  query_planning.py  rank_gpt.py  refactor_report.py  rerank_openai.py  threadpool.py  utils.py
src/utils/: citations.py  configuration.py  constants.py  file.py  gen_utils.py  graph_logger.py  llm.py  logging.py  output.py  pydantic_utils.py  settings.py  transcribe.py
static/: base.html
static/css/: style.css  web_style.css
tests/: conftest.py  test_bgem3.py  test_colbert_reranker.py  test_courtlistener.py  test_doc_joiner.py  test_output.py  test_semantic_search.py  utils.py
tests/main/: test_llm.py
(+2 files in other folders)
