[tool.poetry]
name = "legal-tech-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "*"
openai = "^1.0.0"
pydantic = "^2.0.0"
lancedb = "*"
sentence-transformers = "^2.2.2"
python-dotenv = "*"
instructor = "*"
tiktoken = "*"
eyecite = "*"
citeurl = "*"
tantivy = "^0.21.0"
requests = "^2.31.0"
black = {extras = ["jupyter"], version = "^23.3.0"}
backoff = "^2.2.1"
html2text = "^2020.1.16"
datamodel-code-generator = "^0.25.3"
devtools = "^0.12.2"
spacy = "^3.7.2"
thefuzz = ">=0.22.1,<0.23.0"
suffix-trees = "^0.3.0"
tabulate = "^0.9.0"
termcolor = "^2.4.0"
exa-py = "^1.0.7"
qdrant-client = "^1.7.2"
momento = "^1.17.0"
redis = "^5.0.1"
fakeredis = "^2.21.0"
pyparsing = "^3.1.1"
colorlog = "^6.8.2"
bs4 = "^0.0.2"
pygithub = "^1.58.1"
python-docx = "^1.1.0"
lxml = "^5.1.0"
unstructured = {extras = ["all-docs"], version = "^0.11.5"}
unstructured-inference = "^0.7.18"
haystack = "^0.42"
fire = "^0.5.0"
trafilatura = "^1.5.0"
pypdf = "^4.0.0"
rank-bm25 = "^0.2.2"
pdfplumber = "^0.10.2"
pymupdf = "^1.24.0"
faker = "^22.6.0"
datasketch = "^1.6.4"
metaphor-python = "^0.1.23"
google-api-python-client = "^2.95.0"
pytest = "^8.0.0"
pydantic-settings = "^2.1.0"
graphviz = "^0.20.1"
chromadb = "^0.4.22"
diskcache = "^5.6.3"
md2pdf = "^1.0.1"
aiofiles = "^23.2.1"
markdown = "^3.5.2"
duckdb = "^0.9.2"
justopinion = "^0.2.5"
dspy-ai = {extras = ["chromadb"], version = "^2.1.10"}
pytest-asyncio = "^0.23.5"
geopandas = "^0.14.3"
us = "^3.1.1"
seaborn = "^0.13.2"
pyquery = "^2.0.0"
requests-cache = "^1.2.0"
openpyxl = "^3.1.2"
faiss-cpu = "^1.8.0"
pdfkit = "^1.0.0"
pydub = "^0.25.1"
langchain-community = "^0.0.27"
duckduckgo-search = "^5.0"
crewai = "^0.19.0"
readabilipy = "^0.2.0"
flagembedding = "^1.2.5"
pyvespa = "^0.39.0"
llama-index = "^0.10.20"
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
tensorflow = "^2.16.1"
readability-lxml = "^0.8.1"
faster-whisper = "^1.0.1"
psycopg2 = "^2.9.9"
ipywidgets = "^8.1.2"
marvin = "^2.3.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
nested-lookup = "^0.2.25"
parsel = "^1.9.0"
open-clip-torch = "^2.24.0"
imgkit = "^1.2.3"
pymdown-extensions = "^10.7.1"
fuzzywuzzy = "^0.18.0"
pypdf2 = "^3.0.1"
gliner = "^0.1.6"
llama-index-llms-openai = "^0.1.14"
pyvis = "^0.3.2"
continuous-eval = "^0.3.6"
llama-index-vector-stores-chroma = "^0.1.6"
scipy = "^1.12"
llama-parse = "^0.4.0"
pyowm = "^3.3.0"
geopy = "^2.4.1"
selenium = "^4.19.0"
streamlit-shadcn-ui = "^0.1.18"
streamlit-javascript = "^0.1.5"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
notebook = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"









[tool.poetry.scripts]
start = "turbo_main:main"